fixed shopping cart overlapping elements

--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -1,7 +1,7 @@
 .item-img{
   cursor: pointer;
-  width: 100%;
-  height: 100%;
+  width: 120px; 
+  height: auto;
   transition: transform 0.3s ease;
 }
 
